# senna

./: CMakeLists.txt  LICENSE  README.md  cdefs.lua  chk.lua  env.lua  hash.lua  init.lua  mkl_cblas.h  ner.lua  pos.lua  run.lua  srl.lua  tokenizer.lua  tokens.lua
rocks/: senna-scm-1.rockspec
